--- a/css/site.css
+++ b/css/site.css
@@ -3,9 +3,40 @@ body {
     margin: 0px;
 }
 
+#browse {
+    text-align: left;
+    width: 100%;
+    height: 100%;
+    padding-top: 20px;
+    padding-bottom: 125px;
+    overflow: scroll;
+}
+
+#browse h2 {
+    text-align: center;
+}
+
+.table-container {
+    margin-top: 15px;
+    text-align: center;
+}
+
+.table-container table {
+    width: 90%;
+    margin: 0 auto; 
+}
+
+.table-container table th, .table-container table td {
+    text-align: center;
+}
+
 #map {
     height: 90%;
     width: 100%;
+}
+
+.filters {
+    text-align: center;
 }
 
 .info {
