--- a/css/site.css
+++ b/css/site.css
@@ -12,6 +12,16 @@ body {
     overflow: scroll;
 }
 
+#browse a {
+    cursor: hand;
+}
+
+#browse .dropdown-menu {
+    max-height: 150px;
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
+
 #browse h2 {
     text-align: center;
 }
@@ -37,6 +47,11 @@ body {
 
 .filters {
     text-align: center;
+}
+
+.filter-type {
+    text-align: center;
+    margin-bottom: 15px;
 }
 
 .info {
