--- a/views/browse.html
+++ b/views/browse.html
@@ -109,16 +109,16 @@
 		<div class="btn-group">
 			<input type="hidden" name="average-salary" value="all" />
 			<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-		    	All average salaries <span class="caret"></span>
+		    	All average incomes <span class="caret"></span>
 		  	</button>
 		  	<ul class="dropdown-menu">
-		  		<li><a>All average salaries</a><input type="hidden" value="all" /></li>
-		  		<li><a>$100,000+ average salary</a><input type="hidden" value="100" /></li>
-		  		<li><a>$80,000 - $99,999 average salary</a><input type="hidden" value="80" /></li>
-		  		<li><a>$60,000 - $79,999 average salary</a><input type="hidden" value="60" /></li>
-		  		<li><a>$40,000 - $59,999 average salary</a><input type="hidden" value="40" /></li>
-		  		<li><a>$20,000 - $39,999 average salary</a><input type="hidden" value="20" /></li>
-		  		<li><a>$0 - $19,999 average salary</a><input type="hidden" value="0" /></li>
+		  		<li><a>All average incomes</a><input type="hidden" value="all" /></li>
+		  		<li><a>$50,000+ average income</a><input type="hidden" value="100" /></li>
+		  		<li><a>$40,000 - $49,999 average income</a><input type="hidden" value="80" /></li>
+		  		<li><a>$30,000 - $39,999 average income</a><input type="hidden" value="60" /></li>
+		  		<li><a>$20,000 - $29,999 average income</a><input type="hidden" value="40" /></li>
+		  		<li><a>$10,000 - $19,999 average income</a><input type="hidden" value="20" /></li>
+		  		<li><a>$0 - $9,999 average income</a><input type="hidden" value="0" /></li>
 		  	</ul>
 		</div>
 		<!-- Sort by -->
